--- a/index.html
+++ b/index.html
@@ -13,37 +13,39 @@
 </head>
 <body>
     <main class="main">
-        <div class="calculator-grid">
-          <div class="output">
-            <div class="previous-operand" id="lastOperationScreen" data-previous-operand>123+</div>
-            <div class="current-operand" id="currentOperationScreen" data-current-operand>456</div>
+        <div class="calculator">
+             <!-- Screen clear and delete key -->
+          <div class="screen">
+            <div class="screen-last" id="lastOperationScreen"></div>
+            <div class="screen-current" id="currentOperationScreen">0</div>
           </div>
+          <!-- operators and other keys -->
           <div class="buttons-grid">
-            <button class="btn btn-red span-2" id="clearBtn" onclick="this.blur();" data-all-clear>CLEAR</button>
-            <button class="btn btn-blue span-2" id="deleteBtn" onclick="this.blur();" data-delete>DELETE</button>
+            <button class="btn btn-red span-2" id="clearBtn" onclick="this.blur();">AC</button>
+            <button class="btn btn-blue span-2" id="deleteBtn" onclick="this.blur();">⌫</button>
             <button class="btn" onclick="this.blur();" data-number>7</button>
             <button class="btn" onclick="this.blur();" data-number>8</button>
             <button class="btn" onclick="this.blur();" data-number>9</button>
-            <button class="btn" onclick="this.blur();" data-operation>÷</button>
+            <button class="btn" onclick="this.blur();" data-operator>÷</button>
   
             <button class="btn" onclick="this.blur();" data-number>4</button>
             <button class="btn" onclick="this.blur();" data-number>5</button>
             <button class="btn" onclick="this.blur();" data-number>6</button>
-            <button class="btn" onclick="this.blur();" data-operation>×</button>
+            <button class="btn" onclick="this.blur();" data-operator>×</button>
   
             <button class="btn" onclick="this.blur();" data-number>1</button>
             <button class="btn" onclick="this.blur();" data-number>2</button>
             <button class="btn" onclick="this.blur();" data-number>3</button>
-            <button class="btn" onclick="this.blur();" data-operation>−</button>
+            <button class="btn" onclick="this.blur();" data-operator>−</button>
   
-            <button class="btn" onclick="this.blur();" id="pointBtn" data-number>.</button>
+            <button class="btn" onclick="this.blur();" id="pointBtn">.</button>
             <button class="btn" onclick="this.blur();" data-number>0</button>
-            <button class="btn" onclick="this.blur();" id="equalsBtn" data-equals>=</button>
-            <button class="btn" onclick="this.blur();" data-operation>+</button>
+            <button class="btn" onclick="this.blur();" id="equalsBtn">=</button>
+            <button class="btn" onclick="this.blur();" data-operator>+</button>
           </div>
         </div>
       </main>
-    </div>
-
 </body>
 </html>
+
+
